# kola

./: .envrc  .gitignore  Cargo.toml  flake.nix  justfile  license  readme.md
.github/workflows/: docs.yml
.helix/: languages.toml
.nvim/: init.lua
crates/kola-builtins/: Cargo.toml
crates/kola-builtins/src/: lib.rs
crates/kola-collections/: Cargo.toml
crates/kola-collections/src/: bi_map.rs  im_bi_map.rs  im_shadow_map.rs  lib.rs  shadow_map.rs  shadow_stack.rs  stack_map.rs
crates/kola-compiler/: Cargo.toml
crates/kola-compiler/src/: ir.rs  lib.rs  machine.rs  normalize.rs
crates/kola-context/: Cargo.toml
crates/kola-context/src/: convert.rs  index.rs  lib.rs
crates/kola-core/: Cargo.toml
crates/kola-core/src/: lib.rs  source.rs
crates/kola-core/src/compiler/: ir.rs
crates/kola-core/src/semantic/: env.rs  error.rs  infer.rs  mod.rs
crates/kola-core/src/semantic/types/: builtin.rs  func.rs  mod.rs  row.rs  var.rs  visit.rs
crates/kola-core/src/syntax/: lexer.rs  mod.rs  parser.rs  visit.rs
crates/kola-driver/: Cargo.toml
crates/kola-driver/src/: config.rs  lib.rs  workspace.rs  world.bak.rs
crates/kola-expand/: Cargo.toml
crates/kola-expand/src/: lib.rs
crates/kola-ir/: Cargo.toml
crates/kola-ir/src/: id.rs  instr.rs  ir.rs  lib.rs  print.rs  visit.rs
crates/kola-lowerer/: Cargo.toml
crates/kola-lowerer/src/: lib.rs  module.rs  normalizer.rs  symbol.rs
crates/kola-ls/: Cargo.toml
crates/kola-ls/src/: main.rs  server.rs  token.rs  utils.rs
crates/kola-machine/: Cargo.toml
crates/kola-macros/: Cargo.toml
crates/kola-modules/: Cargo.toml
crates/kola-print/: Cargo.toml
crates/kola-protocol/: Cargo.toml
crates/kola-resolve/: Cargo.toml
crates/kola-resolve/src/: context.rs  declare.rs  define.rs  error.rs  forest.rs  info.rs  lib.rs  module.rs  scope.rs  symbol.rs  topography.rs
crates/kola-resolve/src/define/: mod.rs  module.rs  value.rs
crates/kola-resolve/src/forest/: mod.rs
crates/kola-resolve/src/module/: mapping.rs  mod.rs  scope.rs
crates/kola-resolve/src/resolver/: declare.rs  define.rs  mod.rs
crates/kola-resolver/: Cargo.toml
crates/kola-resolver/src/: bind.rs  constraints.rs  db.rs  def.rs  defs.rs  env.rs  error.rs  forest.rs  functor.rs  info.rs  lib.rs  module.rs  name.rs  phase.rs  print.rs  refs.rs  scope.rs  shape.rs  symbol.rs  topography.rs
crates/kola-resolver/src/resolve/: discover.rs  mod.rs  module.rs  module_ty.rs  structure.rs  ty.rs  value.rs
crates/kola-resolver/src/resolver/: ctor.rs  discover.rs  effect.rs  mod.rs  module.rs  module_ty.rs  ty.rs  value.rs  value.rs.bak
crates/kola-runtime/: Cargo.toml
crates/kola-runtime/src/: closure.rs  heap.rs  lib.rs  value.rs
crates/kola-semantic/: Cargo.toml
crates/kola-semantic/src/: elaborate.rs  env.rs  error.rs  explorer.rs  file.rs  infer.rs  lib.rs  meta.rs  module.rs  resolver.rs  substitute.rs  unify.rs  world.rs
crates/kola-semantic/src/explorer/: import.rs  mod.rs  path.rs
crates/kola-semantic/src/infer/: mod.rs  phase.rs  print.rs
crates/kola-semantic/src/module/: explorer.rs  mod.rs  print.rs
crates/kola-semantic/src/typer/: mod.rs  phase.rs  print.rs  resolver.rs
crates/kola-semantic/src/types/: builtin.rs  collection.rs  func.rs  mod.rs  mono.rs  poly.rs  row.rs  var.rs  visit.rs
crates/kola-span/: Cargo.toml
crates/kola-syntax/: Cargo.toml
crates/kola-syntax/src/: error.rs  lexer.rs  lib.rs  loc.rs  source.rs  span.rs  token.rs
crates/kola-syntax/src/parser/: expr.rs  ext.rs  input.rs  mod.rs  primitives.rs  rules.rs  state.rs
crates/kola-tree/: Cargo.toml
crates/kola-tree/src/: id.rs  (+9 more)
crates/kola-typer/: Cargo.toml
crates/kola-typer/src/: analysis.rs  builtins.rs  check.rs  constraints.rs  env.rs  error.rs  lib.rs  obligations.rs  pattern_typer.rs  phase.rs  print.rs  scope.rs  substitute.rs  test.rs  typer.rs  unify.rs
crates/kola-typer/src/typer/: mod.rs  phase.rs  print.rs  resolver.rs
crates/kola-typer/src/types/: builtin.rs  comp.rs  func.rs  label.rs  list.rs  mod.rs  module.rs  mono.rs  poly.rs  primitive.rs  record.rs  row.rs  type_rep.rs  var.rs  variant.rs  visit.rs  wit.rs
crates/kola-types/: Cargo.toml
crates/kola-types/src/: class.rs  env.rs  kind.rs  lib.rs  visit.rs
crates/kola-types/src/types/: comp.rs  func.rs  label.rs  list.rs  mod.rs  module.rs  mono.rs  poly.rs  primitive.rs  record.rs  row.rs  var.rs  variant.rs  wit.rs
crates/kola-utils/: Cargo.toml
crates/kola-utils/src/: bimap.rs  context.bak.rs  convert.rs  dependency.rs  display.rs  errors.rs  fmt.rs  id.rs  interner.rs  interner_ext.rs  io.rs  lib.rs  scope.rs  serde.rs  tracker.rs  visit.rs
crates/kola-utils/src/interner/: mod.rs  path.rs  str.rs
crates/kola-utils/src/io/: mod.rs
crates/kola-vfs/: Cargo.toml
crates/kola-vfs/src/: diag.rs  error.rs  file.rs  lib.rs  path.rs  source.rs
crates/kola-vm/: Cargo.toml
crates/kola-zed-ext/: Cargo.toml  extension.toml  extension.wasm
docs/: package.json  pnpm-lock.yaml
docs/.vitepress/: config.mts
docs/src/: index.md
examples/: anf.kl  benchmark.kl  benchmark.py  case.kl  composition.kl  cycle.kl  cyclic.kl  dict.kl  effect.kl  effects.kl  expr.kl  functors.kl  hello.kl  lexer.kl  main.kl  match.kl  mod.kl  modules.kl  overview.kl  parse.kl  parser.kl  poly.kl  rec.kl  records.kl  run.kl  str.kl  syntax.kl.bak  test-mod.kl  test.kl  test2.kl  types.kl
examples/modules/: a.kl
nix/: default.nix  devshell.nix  packages.nix
prelude/: prelude.kl  test
prelude/prelude/: bool.kl  cmp.kl  func.kl  io.kl  list.kl  math.kl  num.kl  option.kl  range.kl  record.kl  records.kl  result.kl  serde.kl  str.kl  table.kl  tuple.kl
src/: errors.rs  lib.rs  main.rs  node.rs  source.rs  visit.rs
src/compiler/: ir.rs  machine.rs  mod.rs  normalize.rs
src/inference/: context.rs  error.rs  infer.rs  mod.rs  scope.rs  ty.rs
src/semantic/: constrain.rs  context.rs  env.rs  error.rs  infer.rs  mod.rs  scope.rs  substitute.rs  substitution.rs.bak  unify.rs
src/syntax/: ast.rs  error.rs  lexer.rs  mod.rs  node.rs  parser.rs  print.rs  token.rs  visit.rs
(+160 files in other folders)
