[workspace]
members = ["crates/*"]

[workspace.dependencies]
kola-print = { path = "crates/kola-print" }
kola-tree = { path = "crates/kola-tree" }
kola-syntax = { path = "crates/kola-syntax" }
kola-vfs = { path = "crates/kola-vfs" }
kola-utils = { path = "crates/kola-utils" }
kola-semantic = { path = "crates/kola-semantic" }
kola-compiler = { path = "crates/kola-compiler" }
camino = "1.1"
# cap-std = { version = "3.4", features = ["fs_utf8"] }
chumsky = { version = "0.10", features = [
    # "label",
    "nightly",
    "unstable",
    "serde",
] }
ecow = { version = "0.2.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
derive_more = { version = "2.0", features = [
    "from",
    "try_into",
    "display",
    "into_iterator",
] }
thiserror = "2.0"
owo-colors = "4.1"
miette = "7.4.0"
paste = "1.0"
log = "0.4"

[package]
name = "kola"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
miette = { version = "7.4.0", features = ["fancy"] }
env_logger = "0.11"
log.workspace = true
owo-colors.workspace = true
kola-print.workspace = true
kola-tree.workspace = true
kola-vfs.workspace = true
kola-syntax.workspace = true
kola-semantic.workspace = true
# kola-compiler.workspace = true
camino.workspace = true
