[workspace]
members = ["crates/*"]

[workspace.dependencies]
kola-span = { path = "crates/kola-span" }
kola-print = { path = "crates/kola-print" }
kola-tree = { path = "crates/kola-tree" }
kola-syntax = { path = "crates/kola-syntax" }
# kola-vfs = { path = "crates/kola-vfs" }
kola-modules = { path = "crates/kola-modules" }
kola-driver = { path = "crates/kola-driver" }
kola-utils = { path = "crates/kola-utils" }
kola-typer = { path = "crates/kola-typer" }
kola-compiler = { path = "crates/kola-compiler" }
camino = "1.1"
# grax = { git = "https://github.com/MordragT/grax.git" }
# cap-std = { version = "3.4", features = ["fs_utf8"] }
chumsky = { version = "0.10", features = [
    # "label",
    "nightly",
    "unstable",
    "serde",
] }
indexmap = "2.7.1"
serde = { version = "1.0", features = ["derive"] }
derive_more = { version = "2.0", features = [
    "from",
    "try_into",
    "display",
    "into_iterator",
] }
owo-colors = "4.2"
thiserror = "2.0"
paste = "1.0"
log = "0.4"
either = "1.15"

[package]
name = "kola"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log.workspace = true
kola-print.workspace = true
kola-tree.workspace = true
# kola-vfs.workspace = true
kola-syntax.workspace = true
kola-typer.workspace = true
# kola-compiler.workspace = true
camino.workspace = true
