[workspace]
members = ["crates/*"]

[workspace.dependencies]
# Kola Crates
kola-builtins = { path = "crates/kola-builtins" }
kola-collections = { path = "crates/kola-collections" }
kola-driver = { path = "crates/kola-driver" }
kola-ir = { path = "crates/kola-ir" }
kola-lowerer = { path = "crates/kola-lowerer" }
kola-ls = { path = "crates/kola-ls" }
kola-macros = { path = "crates/kola-macros" }
kola-print = { path = "crates/kola-print" }
kola-resolver = { path = "crates/kola-resolver" }
kola-span = { path = "crates/kola-span" }
kola-syntax = { path = "crates/kola-syntax" }
kola-tree = { path = "crates/kola-tree" }
kola-typer = { path = "crates/kola-typer" }
kola-utils = { path = "crates/kola-utils" }
kola-vm = { path = "crates/kola-vm" }

camino = "1.1"
chumsky = { version = "0.10", features = [
    # "label",
    "nightly",
    "unstable",
    "serde",
] }
indexmap = "2.7.1"
serde = { version = "1.0", features = ["derive"] }
derive_more = { version = "2.0", features = [
    "from",
    "try_into",
    "display",
    "into_iterator",
    "from_str",
] }
enum-as-inner = "0.6.1"
owo-colors = "4.2"
thiserror = "2.0"
paste = "1.0"
log = "0.4"
enumset = "1.1"


[package]
name = "kola"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kola-print.workspace = true
kola-driver.workspace = true
kola-utils.workspace = true

camino.workspace = true
log.workspace = true
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
concolor = { version = "0.1", features = ["auto"] }
