[package]
name = "kola-driver"
version = "0.1.0"
edition = "2024"

[dependencies]
kola-resolver.workspace = true
kola-syntax.workspace = true
kola-utils.workspace = true
kola-span.workspace = true
kola-print.workspace = true
kola-typer.workspace = true
camino.workspace = true
log.workspace = true
owo-colors.workspace = true
