[package]
name = "kola-driver"
version = "0.1.0"
edition = "2024"

[dependencies]
kola-ir.workspace = true
kola-vm.workspace = true
kola-lowerer.workspace = true
kola-resolver.workspace = true
kola-utils.workspace = true
kola-span.workspace = true
kola-syntax.workspace = true
kola-tree.workspace = true
kola-print.workspace = true
kola-typer.workspace = true
camino.workspace = true
log.workspace = true
owo-colors.workspace = true
