[package]
name = "kola-lowerer"
version = "0.1.0"
edition = "2024"

[dependencies]
kola-ir.workspace = true
kola-tree.workspace = true
kola-resolver.workspace = true
kola-typer.workspace = true
kola-builtins.workspace = true
kola-collections.workspace = true
kola-print.workspace = true
kola-utils.workspace = true
log.workspace = true

[dev-dependencies]
kola-vm.workspace = true
# camino.workspace = true
kola-utils.workspace = true
# kola-syntax.workspace = true
# kola-span.workspace = true
