[package]
name = "kola-resolver"
version = "0.1.0"
edition = "2024"

[dependencies]
kola-builtins.workspace = true
kola-collections.workspace = true
kola-utils.workspace = true
kola-span.workspace = true
kola-tree.workspace = true
kola-syntax.workspace = true
kola-print.workspace = true
serde.workspace = true
indexmap.workspace = true
camino.workspace = true
log.workspace = true
owo-colors.workspace = true
derive_more.workspace = true
enum-as-inner.workspace = true
