[package]
name = "kola-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
kola-builtins.workspace = true
kola-ir.workspace = true
kola-utils.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
derive_more.workspace = true
enum-as-inner.workspace = true
