[package]
name = "kola-syntax"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror.workspace = true
miette.workspace = true
owo-colors.workspace = true
ecow.workspace = true
chumsky = { version = "=1.0.0-alpha.8", features = [
    # "label",
    "nightly",
    "unstable",
    "serde",
] }
kola-tree.workspace = true
kola-utils.workspace = true
kola-print.workspace = true
