[package]
name = "kola-syntax"
version = "0.1.0"
edition = "2024"

[dependencies]
kola-tree.workspace = true
kola-utils.workspace = true
kola-print.workspace = true
kola-span.workspace = true
thiserror.workspace = true
chumsky.workspace = true
derive_more.workspace = true
paste.workspace = true
serde.workspace = true
