[package]
name = "kola-typer"
version = "0.1.0"
edition = "2024"

[dependencies]
kola-builtins.workspace = true
kola-collections.workspace = true
kola-print.workspace = true
kola-span.workspace = true
kola-tree.workspace = true
kola-types.workspace = true
kola-resolver.workspace = true
kola-syntax.workspace = true
kola-utils.workspace = true
thiserror.workspace = true
serde.workspace = true
derive_more.workspace = true
log.workspace = true
camino.workspace = true
enumset.workspace = true

# This should be removed as soon as the unfification is rewritten to an iterative algorithm.
stacker = "0.1"
