[package]
name = "kola-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
kola-collections.workspace = true
camino.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
derive_more.workspace = true
pathdiff = { version = "0.2.3", features = ["camino"] }
typenum = "1.18.0"
graphwiz = "0.5.1"
